--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
 <h1>Our Menu</h1>
-<div class="container">
-	<div class="row">
-		<section class="col-lg-4 col-md-6 col-sm-12"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></section>
-		<section class="col-lg-4 col-md-6 col-sm-12"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></section>
-		<section class="col-lg-4 col-md-12 col-sm-12"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></section>
-	</div>
+<div class="row">
+		<div class="col-lg-4 col-md-6 col-sm-12"><section><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></section></div>
+		<div class="col-lg-4 col-md-6 col-sm-12"><section><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></section></div>
+		<div class="col-lg-4 col-md-12 col-sm-12"><section><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></section></div>
 </div>
+
 
 <!-- NOTE: PUT EACH SECTION IN A DIV, THE DIV SHOULD HAVE THE MEDIA CLASSES
 THEN, THE SECTIONS SHOULD HAVE THE OUTLINES -->
