--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -7,17 +7,24 @@
 	<title>Assignment Solution for Module 2</title>
 </head>
 <body>
-<h1>Our Menu</h1>
-<div class="row">
-		<div class="col-lg-4 col-md-6 col-sm-12"><section><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></section></div>
-		<div class="col-lg-4 col-md-6 col-sm-12"><section><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></section></div>
-		<div class="col-lg-4 col-md-12 col-sm-12"><section><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></section></div>
-</div>
-
-
-<!-- NOTE: PUT EACH SECTION IN A DIV, THE DIV SHOULD HAVE THE MEDIA CLASSES
-THEN, THE SECTIONS SHOULD HAVE THE OUTLINES -->
-
-</div>
+	<h1>Our Menu</h1>
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<section>
+			<h2 id="item1">Chicken</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris ultrices eros in cursus. Tellus in hac habitasse platea dictumst vestibulum rhoncus. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices.</p>
+		</section>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<section>
+			<h2 id="item2">Beef</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris ultrices eros in cursus. Tellus in hac habitasse platea dictumst vestibulum rhoncus. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices.</p>
+		</section>
+	</div>
+	<div class="col-lg-4 col-md-12 col-sm-12">
+		<section>
+		<h2 id="item3">Sushi</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris ultrices eros in cursus. Tellus in hac habitasse platea dictumst vestibulum rhoncus. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices.</p>
+	</section>
+	</div>
 </body>
 </html>
