--- a/mod3-solution/index.html
+++ b/mod3-solution/index.html
@@ -5,20 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <title>Boostrap Starter Page</title>
+    <title>Assignment Solution for Module 3</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
+<!-- Start of Nav -->
 
-  <h1>Hello Coursera!</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><span>Food, LLC</span></a>
+    </div>
+
+    <!-- Nav List -->
+    <div class="collapse navbar-collapse" id="collapsable-nav">
+      <ul class="nav navbar-nav" id="nav-list">
+        <li class="visible-xs"><a href="#"><span>Chicken</span></a></li>
+        <li class="visible-xs"><a href="#"><span>Beef</span></a></li>
+        <li class="visible-xs"><a href="#"><span>Sushi</span></a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
+<!-- End of Nav -->
+
+<!-- Start of Content -->
+<h1 class="text-center">Our Menu</h1>
+
+<div class="container">
+  <div class="row">
+    <div class="section col-xs-12"><h3>Chicken</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis ut diam quam nulla porttitor massa id neque aliquam. Morbi leo urna molestie at elementum eu facilisis sed odio. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Quisque non tellus orci ac auctor augue mauris. Id leo in vitae turpis massa. Lobortis elementum nibh tellus molestie nunc non. Faucibus interdum posuere lorem ipsum dolor sit amet. Arcu cursus euismod quis viverra nibh cras pulvinar mattis nunc. Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Auctor augue mauris augue neque gravida in. Donec enim diam vulputate ut pharetra sit. Dignissim enim sit amet venenatis urna cursus eget nunc scelerisque. Habitant morbi tristique senectus et netus et malesuada fames. Quisque id diam vel quam elementum pulvinar etiam non quam. Eu consequat ac felis donec et odio pellentesque diam volutpat.</p></div>
+    <div class="section col-xs-12"><h3>Beef</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis ut diam quam nulla porttitor massa id neque aliquam. Morbi leo urna molestie at elementum eu facilisis sed odio. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Quisque non tellus orci ac auctor augue mauris. Id leo in vitae turpis massa. Lobortis elementum nibh tellus molestie nunc non. Faucibus interdum posuere lorem ipsum dolor sit amet. Arcu cursus euismod quis viverra nibh cras pulvinar mattis nunc. Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Auctor augue mauris augue neque gravida in. Donec enim diam vulputate ut pharetra sit. Dignissim enim sit amet venenatis urna cursus eget nunc scelerisque. Habitant morbi tristique senectus et netus et malesuada fames. Quisque id diam vel quam elementum pulvinar etiam non quam. Eu consequat ac felis donec et odio pellentesque diam volutpat.</p></div>
+    <div class="section col-xs-12"><h3>Sushi</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis ut diam quam nulla porttitor massa id neque aliquam. Morbi leo urna molestie at elementum eu facilisis sed odio. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Quisque non tellus orci ac auctor augue mauris. Id leo in vitae turpis massa. Lobortis elementum nibh tellus molestie nunc non. Faucibus interdum posuere lorem ipsum dolor sit amet. Arcu cursus euismod quis viverra nibh cras pulvinar mattis nunc. Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Auctor augue mauris augue neque gravida in. Donec enim diam vulputate ut pharetra sit. Dignissim enim sit amet venenatis urna cursus eget nunc scelerisque. Habitant morbi tristique senectus et netus et malesuada fames. Quisque id diam vel quam elementum pulvinar etiam non quam. Eu consequat ac felis donec et odio pellentesque diam volutpat.</p></div>
+  </div>
+
+
+
+</div>
+<!-- End of Content -->
+
+
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
